fix layout broken in safari

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,7 +76,6 @@ p {
 }
 
 .header-top .navbar .search-wrap .search-form {
-    padding: 6px 0px;
     cursor: pointer;
     float: right;
 }
@@ -105,6 +104,7 @@ footer {
     width: 100px;
     outline: none;
     color: #eee;
+    margin-top: 5px;
 }
 #search-input.active {
 
